--- a/gui/src/public/css/dashboardEditor.scss
+++ b/gui/src/public/css/dashboardEditor.scss
@@ -19,7 +19,7 @@
   height: auto;
   min-height: 70vh;
   padding: 0px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0);
+  // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0);
 }
 
 .dashboard-filter-btn {
